Summary: Fixed Bug where Background layer overlapped components.
Test Plan: None

Reviewers: linh

Reviewed By: linh

Subscribers: linh

Revert Plan: None

Differential Revision: http://13.57.139.206/D395

--- a/src/components/NavBarComponent/NavBarComponent.css
+++ b/src/components/NavBarComponent/NavBarComponent.css
@@ -4,6 +4,7 @@
     height: 100%;
     top: 64px;
     background-color: #ffffff;
+    z-index: 2;
 }
 
 .nav-bar-list {
