--- a/src/components/TopBarComponent/TopBarComponent.css
+++ b/src/components/TopBarComponent/TopBarComponent.css
@@ -4,6 +4,7 @@ top: 0;
 height: 60px;
 width: 100%;
 box-shadow: 0 1px 0 0 #ebebeb;
+z-index: 2;
 }
 
 .top-bar-icon-link {
