--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -109,7 +109,6 @@ label.error:before {
     background-color: #f9f9f9;
     width: 100%;
     height: 100%;
-    z-index: -1;
 }
 
 
